--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,1 +1,22 @@
-<h1>HOME PAGE</h1>
+<div>
+    <h1>Here are all of our listings today</h1>
+    Is AngularJS working? {{ 2 === 2 }}
+    <table>
+        <thead>
+            <tr>
+                <th>Monthly Rent</th>
+                <th>Square Footage</th>
+                <th>City</th>
+                <th>Image</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="house in rc.rental">
+                <td>{{listings.cost}}</td>
+                <td>{{listings.sqft}}</td>
+                <td>{{listings.city}}</td>
+                <td>{{listings.image_path}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
