--- a/server/public/views/sales.html
+++ b/server/public/views/sales.html
@@ -1,1 +1,22 @@
-<h1>SALES</h1>
+<div>
+    <h1>Here are our sales listings today</h1>
+    Is AngularJS working? {{ 2 === 2 }}
+    <table>
+        <thead>
+            <tr>
+                <th>Price</th>
+                <th>Square Footage</th>
+                <th>City</th>
+                <th>Image</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="house in sc.rental">
+                <td>{{listings.cost}}</td>
+                <td>{{listings.sqft}}</td>
+                <td>{{listings.city}}</td>
+                <td>{{listings.image_path}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
