added some styling

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -2,3 +2,10 @@
     background-color: aliceblue;
 }
 
+.header {
+    background-color: lavender;
+}
+
+.inputs {
+    background-color: blanchedalmond;
+}
