--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,15 +1,16 @@
 <div class="container">
-    <div>
+    <div class="inputs">
+        <h1>List your home here</h1>
         <form ng-submit="hc.addHouse(hc.houseToAdd)">
-            COST: <input type="number" ng-model="hc.houseToAdd.cost" placeholder="cost"><br>
-            SIZE: <input type="number" ng-model="hc.houseToAdd.sqft" placeholder="square footage"><br>
-            TYPE: <input type="text" ng-model="hc.houseToAdd.type" placeholder="rent or sell"><br>
-            CITY: <input type="text" ng-model="hc.houseToAdd.city" placeholder="city"><br>
+            COST:  <input type="number" ng-model="hc.houseToAdd.cost" placeholder="cost"><br>
+            SIZE:  <input type="number" ng-model="hc.houseToAdd.sqft" placeholder="square footage"><br>
+            TYPE:  <input type="text" ng-model="hc.houseToAdd.type" placeholder="rent or sell"><br>
+            CITY:  <input type="text" ng-model="hc.houseToAdd.city" placeholder="city"><br>
             IMAGE: <input type="text" ng-model="hc.houseToAdd.image_path" placeholder="image"><br>
-            <input type="submit">
+            <input type="submit" class="btn btn-outline-secondary">
         </form>    
     </div>
-    <h1>Here are all of our listings today</h1>
+    <h2>Here are all of our listings today</h2>
     <!-- Is AngularJS working? {{ 2 === 2 }} -->
     <div>
         <div ng-repeat="listings in hc.listings">
