--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,14 +1,29 @@
 <div class="container">
     <div class="inputs">
         <h1>List your home here</h1>
-        <form ng-submit="hc.addHouse(hc.houseToAdd)">
-            COST:  <input type="number" ng-model="hc.houseToAdd.cost" placeholder="cost"><br>
-            SIZE:  <input type="number" ng-model="hc.houseToAdd.sqft" placeholder="square footage"><br>
-            TYPE:  <input type="text" ng-model="hc.houseToAdd.type" placeholder="rent or sell"><br>
-            CITY:  <input type="text" ng-model="hc.houseToAdd.city" placeholder="city"><br>
-            IMAGE: <input type="text" ng-model="hc.houseToAdd.image_path" placeholder="image"><br>
-            <input type="submit" class="btn btn-outline-secondary">
-        </form>    
+        <form ng-submit="hc.addHouse(hc.houseToAdd)" id="houseForm">
+            <div class="mb-3">
+                <input type="number" ng-model="hc.houseToAdd.cost" placeholder="cost"><br>
+                <input type="number" ng-model="hc.houseToAdd.sqft" placeholder="square footage"><br>
+                <select form="houseForm" ng-model="hc.houseToAdd.type">
+                    <option value="" disabled selected>Rent or Sell</option>
+                    <option value="rent">rent</option>
+                    <option value="sell">sell</option>
+                </select><br>
+                <input type="text" ng-model="hc.houseToAdd.city" placeholder="city"><br>
+                <select form="houseForm" ng-model="hc.houseToAdd.image_path">
+                    <option value="" disabled selected>Select Discription</option>
+                    <option value="classic-flats.jpg">classic-flats.jpg</option>
+                    <option value="haunted.png">haunted.png</option>
+                    <option value="older.jpg">older.jpg</option>
+                    <option value="shiney.jpg">shiney.jpg</option>
+                    <option value="stony.jpg">stony.jpg</option>
+                    <option value="rental.jpg">rental.jpg</option>
+                    <option value="rental2.jpg">rental2.jpg</option>
+                </select><br>
+                <br><input type="submit" class="btn btn-outline-secondary">
+            </div>
+        </form>
     </div>
     <h2>Here are all of our listings today</h2>
     <!-- Is AngularJS working? {{ 2 === 2 }} -->
