fixed sale/sell bug

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -8,7 +8,7 @@
                 <select form="houseForm" ng-model="hc.houseToAdd.type">
                     <option value="" disabled selected>Rent or Sell</option>
                     <option value="rent">rent</option>
-                    <option value="sell">sell</option>
+                    <option value="sale">sell</option>
                 </select><br>
                 <input type="text" ng-model="hc.houseToAdd.city" placeholder="city"><br>
                 <select form="houseForm" ng-model="hc.houseToAdd.image_path">
